[gd_scene load_steps=8 format=3 uid="uid://j4ihl5y2awa"]

[ext_resource type="Texture2D" uid="uid://dxu07167u45ke" path="res://assets/office-outside.png" id="1_3s1vf"]
[ext_resource type="Script" path="res://office.gd" id="1_w7k2b"]
[ext_resource type="Texture2D" uid="uid://cg2cgeddx8tf6" path="res://assets/office-inside.png" id="2_v5ooh"]
[ext_resource type="PackedScene" uid="uid://y70702kwpevi" path="res://textbox.tscn" id="4_b2x23"]
[ext_resource type="PackedScene" uid="uid://do5vxde6f1gwp" path="res://submit_box.tscn" id="5_2g7wr"]
[ext_resource type="PackedScene" uid="uid://d1b6843ixwxes" path="res://transition_box.tscn" id="6_ype85"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6kphe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3s1vf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v5ooh")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="OfficeScene" type="Node2D"]
script = ExtResource("1_w7k2b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(400, 300)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_6kphe")
animation = &"new_animation"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 408.0
offset_top = 208.0
offset_right = 790.0
offset_bottom = 592.0

[node name="submit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 348.0
offset_right = 128.0
offset_bottom = 379.0
text = " Submit"

[node name="name" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 91.0
offset_right = 210.0
offset_bottom = 122.0
placeholder_text = "(leave blank if no name)"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 63.0
offset_right = 316.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Name of our cherished customer"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 11.0
offset_right = 44.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.956863, 0, 0.662745, 1)
text = "COMPLAINUSERV CUSTOMER JOY FORM 5787HZ"

[node name="Label3" type="Label" parent="Control"]
layout_mode = 0
offset_left = 5.0
offset_top = 143.0
offset_right = 291.0
offset_bottom = 166.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Grievance category of our cherished customer
(check all that apply)"

[node name="rats" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 202.0
offset_right = 74.0
offset_bottom = 233.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Rats"

[node name="car_accident" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 224.0
offset_top = 200.0
offset_right = 294.0
offset_bottom = 231.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Car accident"

[node name="animals_speaking" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 224.0
offset_top = 221.0
offset_right = 348.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Animals speaking"

[node name="thievery" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 224.0
offset_top = 243.0
offset_right = 388.0
offset_bottom = 274.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Thievery"

[node name="murder_most_foul" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 202.0
offset_top = 265.0
offset_right = 376.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Murder (most foul)"

[node name="murder_least_foul" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 202.0
offset_top = 284.0
offset_right = 376.0
offset_bottom = 315.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Murder (least foul)"

[node name="murder_most_fowl" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 202.0
offset_top = 303.0
offset_right = 376.0
offset_bottom = 334.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Murder (most fowl)"

[node name="non_rat" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 222.0
offset_right = 151.0
offset_bottom = 253.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Non-rat vermin/entities"

[node name="existential_panic" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 244.0
offset_right = 215.0
offset_bottom = 275.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Existential panic"

[node name="product_complaint" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 284.0
offset_right = 174.0
offset_bottom = 315.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Product complaint"

[node name="price_product_quality" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 265.0
offset_right = 215.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "Price/product quality"

[node name="pathogen_x" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 304.0
offset_right = 306.0
offset_bottom = 335.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "PATHOGEN X"

[node name="Balance" type="Label" parent="."]
offset_left = 22.0
offset_top = 211.0
offset_right = 184.0
offset_bottom = 234.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Money: $55"

[node name="Clock" type="Label" parent="."]
offset_left = 23.0
offset_top = 241.0
offset_right = 64.0
offset_bottom = 264.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "15:45"

[node name="TextBox" parent="." instance=ExtResource("4_b2x23")]

[node name="SubmitBox" parent="." instance=ExtResource("5_2g7wr")]
visible = false
position = Vector2(591, 385)

[node name="ClockTimer" type="Timer" parent="."]
wait_time = 0.071
autostart = true

[node name="TransitionBox" parent="." instance=ExtResource("6_ype85")]
visible = false

[connection signal="pressed" from="Control/submit" to="." method="_on_submit_pressed"]
[connection signal="dismissed" from="SubmitBox" to="." method="_on_submit_box_dismissed"]
[connection signal="timeout" from="ClockTimer" to="." method="_on_clock_timer_timeout"]
[connection signal="dismissed" from="TransitionBox" to="." method="_on_transition_box_dismissed"]
